[project]
name = "bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "lightning>=2.0",
    "transformers>=4.40.0",
    "datasets>=2.13.1",
    "scikit-learn>=1.5.0",
    "wandb>=0.17.0",
    "numpy>=2.0",
    "mecab>=0.996.11",
    "fugashi>=1.5.1",
    "unidic-lite>=1.0.8",
    "evaluate>=0.4.5",
]
